chore: fix paragraph spacing on homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ li {
   /* margin: 0; */
   font-size: 20px;
   /* line-height: 3.75; */
-  padding: 20px 50px 20px 0;
+  padding: 2px 50px 2px 0;
   color: dimgrey;
   font-family: "Montserrat", sans-serif;
 }
